--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,7 @@
 <!-- Create your form here -->
+<h1>Student Form</h1>
+<%= form_tag students_path do %>
+<p>First Name: <%= text_field_tag :first_name %></p>
+<p>Last Name: <%= text_field_tag :last_name %></p>
+<%= submit_tag "Submit Student"%>
+<% end %>
